--- a/package/emortal/default-settings/Makefile
+++ b/package/emortal/default-settings/Makefile
@@ -16,8 +16,6 @@ PKG_RELEASE:=$(COMMITCOUNT)
 
 PKG_LICENSE:=GPL-3.0
 
-PKG_CONFIG_DEPENDS:=CONFIG_DEFAULT_SETTINGS_OPTIMIZE_FOR_CHINESE
-
 include $(INCLUDE_DIR)/package.mk
 
 define Package/default-settings
@@ -28,15 +26,10 @@ define Package/default-settings
   DEPENDS:=+luci-lib-base
 endef
 
-define Package/default-settings/config
-config DEFAULT_SETTINGS_OPTIMIZE_FOR_CHINESE
-	bool "Optimize for mainland China users"
-	select LUCI_LANG_zh_Hans
-	default n
-endef
-
-define Package/default-settings/description
-  Language Support Packages.
+define Package/default-settings-chn
+  $(Package/default-settings)
+  TITLE+= (Optimize for CHN users)
+  DEPENDS:=+default-settings +@LUCI_LANG_zh_Hans
 endef
 
 define Build/Compile
@@ -48,8 +41,9 @@ define Package/default-settings/install
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
 	$(INSTALL_BIN) ./files/zzz-default-settings $(1)/etc/uci-defaults/99-default-settings
+endef
 
-ifeq ($(CONFIG_DEFAULT_SETTINGS_OPTIMIZE_FOR_CHINESE),y)
+define Package/default-settings-chn/install
 	$(INSTALL_BIN) ./files/zzz-default-settings-chinese $(1)/etc/uci-defaults/99-default-settings-chinese
 
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
@@ -59,3 +53,4 @@ endif
 endef
 
 $(eval $(call BuildPackage,default-settings))
+$(eval $(call BuildPackage,default-settings-chn))
