--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -27,49 +27,34 @@ endef
 define Package/autocore-x86
   TITLE:=x86/x64 auto core loadbalance script.
   MAINTAINER:=Lean / CN_SZTL
-  DEPENDS:=@TARGET_x86 +bc +lm-sensors +ethtool
+  DEPENDS:=@TARGET_x86 +lm-sensors +ethtool
   VARIANT:=x86
-endef
-
-define Package/autocore-arm/description
-  Display more details info about the devices in LuCI.
-endef
-
-define Package/autocore-x86/description
-  A USB autoconfig hotplug script.
 endef
 
 define Build/Compile
 endef
 
-define Package/autocore-arm/install
-	$(INSTALL_DIR) $(1)/etc
-	$(INSTALL_BIN) ./files/arm/rpcd_luci $(1)/etc/rpcd_luci
-	$(INSTALL_DATA) ./files/arm/rpcd_luci-mod-status.json $(1)/etc/rpcd_luci-mod-status.json
-	$(INSTALL_DATA) ./files/arm/rpcd_10_system.js $(1)/etc/rpcd_10_system.js
+define Package/autocore/install/Default
+	$(INSTALL_DIR) $$(1)/etc
+	$(CP) ./files/generic/index.htm $$(1)/etc/
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) ./files/arm/090-cover-index_files $(1)/etc/uci-defaults/090-cover-index_files
+	$(INSTALL_BIN) ./files/generic/090-cover-index_htm $$(1)/etc/uci-defaults/
 
 	$(INSTALL_DIR) $(1)/sbin
-	$(INSTALL_BIN) ./files/arm/cpuinfo $(1)/sbin/cpuinfo
+	$(INSTALL_BIN) ./files/generic/cpuinfo $$(1)/sbin/
+	$(INSTALL_BIN) ./files/generic/ethinfo $$(1)/sbin/
+endef
+
+define Package/autocore-arm/install
+	$(call Package/autocore/install/Default,$(1))
 endef
 
 define Package/autocore-x86/install
-	$(INSTALL_DIR) $(1)/etc
-	$(INSTALL_BIN) ./files/x86/rpcd_luci $(1)/etc/rpcd_luci
-	$(INSTALL_DATA) ./files/x86/rpcd_luci-mod-status.json $(1)/etc/rpcd_luci-mod-status.json
-	$(INSTALL_DATA) ./files/x86/rpcd_10_system.js $(1)/etc/rpcd_10_system.js
+	$(call Package/autocore/install/Default)
 
 	$(INSTALL_DIR) $(1)/etc/init.d
-	$(INSTALL_BIN) ./files/x86/autocore $(1)/etc/init.d/autocore
-
-	$(INSTALL_DIR) $(1)/sbin
-	$(INSTALL_BIN) ./files/x86/cpuinfo $(1)/sbin/cpuinfo
-	$(INSTALL_BIN) ./files/x86/ethinfo $(1)/sbin/ethinfo
-
-	$(INSTALL_DIR) $(1)/www/luci-static/resources/view/status/include
-	$(INSTALL_DATA) ./files/x86/rpcd_21_ethinfo.js $(1)/www/luci-static/resources/view/status/include/21_ethinfo.js
+	$(INSTALL_BIN) ./files/x86/autocore $(1)/etc/init.d/
 endef
 
 $(eval $(call BuildPackage,autocore-arm))
