--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -36,10 +36,8 @@ endef
 
 define Package/autocore/install/Default
 	$(INSTALL_DIR) $(1)/etc
-	$(CP) ./files/generic/rpcd_10_system.js $(1)/etc/
-	$(CP) ./files/generic/rpcd_21_ethinfo.js $(1)/etc/
-	$(CP) ./files/generic/rpcd_luci $(1)/etc/
-	$(CP) ./files/generic/rpcd_luci-mod-status.json $(1)/etc/
+	$(CP) ./files/generic/10_system.js $(1)/etc/rpcd_10_system.js
+	$(CP) ./files/generic/luci $(1)/etc/rpcd_luci
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
 	$(INSTALL_BIN) ./files/generic/090-cover-index_files $(1)/etc/uci-defaults/
@@ -47,6 +45,12 @@ define Package/autocore/install/Default
 	$(INSTALL_DIR) $(1)/sbin
 	$(INSTALL_BIN) ./files/generic/cpuinfo $(1)/sbin/
 	$(INSTALL_BIN) ./files/generic/ethinfo $(1)/sbin/
+
+	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+	$(CP) ./files/generic/luci-mod-status-autocore.json $(1)/usr/share/rpcd/acl.d/
+
+	$(INSTALL_DIR) $(1)/www/luci-static/resources/view/status/include
+	$(INSTALL_DATA) ./files/generic/21_ethinfo.js $(1)/www/luci-static/resources/view/status/include/
 endef
 
 define Package/autocore-arm/install
@@ -54,7 +58,7 @@ define Package/autocore-arm/install
 endef
 
 define Package/autocore-x86/install
-	$(call Package/autocore/install/Default)
+	$(call Package/autocore/install/Default,$(1))
 
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/x86/autocore $(1)/etc/init.d/
