--- a/package/emortal/autocore/Makefile
+++ b/package/emortal/autocore/Makefile
@@ -14,6 +14,7 @@ PKG_CONFIG_DEPENDS:= \
 	CONFIG_TARGET_bcm53xx
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/target.mk
 
 define Package/autocore-arm
   TITLE:=ARM auto core script.
@@ -55,6 +56,10 @@ endef
 
 define Package/autocore-arm/install
 	$(call Package/autocore/install/Default,$(1))
+
+ifneq ($(filter ipq% %mt7622, $(TARGETID)),)
+        $(INSTALL_BIN) ./files/arm/tempinfo $(1)/sbin/
+endif
 endef
 
 define Package/autocore-x86/install
