--- a/package/kernel/mt-drivers/mt_wifi/Makefile
+++ b/package/kernel/mt-drivers/mt_wifi/Makefile
@@ -42,7 +42,6 @@ define Package/mt_wifi/install
 	$(INSTALL_DIR) $(1)/etc/wireless/mt7615/
 	$(INSTALL_DIR) $(1)/etc_ro/Wireless/RT2860AP/
 	$(INSTALL_DIR) $(1)/lib/preinit/
-	$(INSTALL_DIR) $(1)/etc_ro/wlan/
 ifeq ($(CONFIG_MTK_CHIP_MT7603E_MT7612E),y)
 	$(INSTALL_DATA) ./files/7603_7612-l1profile.dat $(1)/etc/wireless/l1profile.dat
 	$(INSTALL_DATA) ./files/mt7603.dat $(1)/etc/wireless/mt7615/mt7615.1.dat
@@ -51,8 +50,7 @@ else ifeq ($(CONFIG_MTK_CHIP_MT7603E_MT7615E),y)
 	$(INSTALL_DATA) ./files/7603_7615-l1profile.dat $(1)/etc/wireless/l1profile.dat
 	$(INSTALL_DATA) ./files/mt7603.dat $(1)/etc/wireless/mt7615/mt7615.1.dat
 	$(INSTALL_DATA) ./files/mt7615.dat $(1)/etc/wireless/mt7615/mt7615.2.dat
-else
-ifeq ($(CONFIG_MTK_CHIP_MT7615E_DBDC),y)
+else ifeq ($(CONFIG_MTK_CHIP_MT7615E_DBDC),y)
 	$(INSTALL_DATA) ./files/dbdc.l1profile.dat $(1)/etc/wireless/l1profile.dat
 	$(INSTALL_DATA) ./files/mt7615.1.2G.dat $(1)/etc/wireless/mt7615/
 	$(INSTALL_DATA) ./files/mt7615.1.5G.dat $(1)/etc/wireless/mt7615/
@@ -60,7 +58,6 @@ else
 	$(INSTALL_DATA) ./files/7615.l1profile.dat $(1)/etc/wireless/l1profile.dat
 	$(INSTALL_DATA) ./files/mt7615.2G.dat $(1)/etc/wireless/mt7615/mt7615.1.dat
 	$(INSTALL_DATA) ./files/mt7615.5G.dat $(1)/etc/wireless/mt7615/mt7615.2.dat
-endif
 endif
 	$(INSTALL_DATA) ./files/mt7615e-sku.dat $(1)/etc_ro/Wireless/RT2860AP/SingleSKU.dat
 	$(INSTALL_DATA) ./files/mt7615e-sku-bf.dat $(1)/etc_ro/Wireless/RT2860AP/SingleSKU_BF.dat
